# dockscribe

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
dockscribe/: __main__.py
dockscribe/composeCraft/: cli.py  server.py
dockscribe/container/: cli.py  utils.py
