[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dockscribe"
version = "1.0.2"
authors = [
  {name = "Lucas Sovre", email = "lucas.sovre@entrecompetents.fr"},
]
description = "Turn any docker infrastructure in a visual map with composecraft.com"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer",
    "docker",
    "requests",
    "pyyaml"
]

[project.scripts]
dockscribe = "dockscribe:app"

[project.urls]
"Homepage" = "https://github.com/LucasSovre/dockscribe"
"Source" = "https://github.com/LucasSovre/dockscribe"