[metadata]
name = dockscribe
version = 1.0.1
author = Lucas Sovre
author_email = lucas.sovre@entrecompetents.fr
description = Turn any docker infrastructure in a visual map with composecraft.com
license: Apache 2.0

[options]
packages = find:
python_requires = >=3.9
install_requires =
    typer
    docker
    requests
    pyyaml

[options.entry_points]
console_scripts =
    dockscribe = dockscribe:app